ejs, registration, login, post, store id, logout, edit post, delete post

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_USER = 'postgres'
 DB_HOST = 'localhost'
 DB_DATABASE = 'blog web'
-DB_PASSWORD = 'riya1995'
+DB_PASSWORD = 'shro0204'
 DB_PORT = '5432'
